--- a/client/styles/global.css
+++ b/client/styles/global.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 @layer base {
-  @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap");
+  @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800;900&display=swap");
 }
